// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`concurrent-clients > build after clean succeeds 1`] = `
[
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
  "rpc.clean[working_dir=.]",
  "  clean.execute[scope=root]",
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
]
`;

exports[`concurrent-clients > build succeeds while watch is running 1`] = `
[
  "rpc.watch[working_dir=.]",
  "  work_queue.watch_initial_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=0]",
  "      build.compile",
  "        build.compile_wave[file_count=0]",
]
`;

exports[`concurrent-clients > clean succeeds while watch is running 1`] = `
[
  "rpc.watch[working_dir=.]",
  "  work_queue.watch_initial_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
  "rpc.clean[working_dir=.]",
  "  clean.execute[scope=root]",
]
`;

exports[`concurrent-clients > format succeeds while watch is running 1`] = `
[
  "rpc.watch[working_dir=.]",
  "  work_queue.watch_initial_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
  "rpc.format[working_dir=., check=false, is_stdin=false]",
  "  work_queue.handle_format_collect_files",
  "    build.initialize_packages",
  "  format.execute[file_count=11, check=false]",
]
`;

exports[`concurrent-clients > two sequential builds both succeed 1`] = `
[
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=0]",
  "      build.compile",
  "        build.compile_wave[file_count=0]",
]
`;
